@@ -1,9 +1,0 @@
-[Unit]
-Description=K Display Manager
-After=systemd-user-sessions.service
-
-[Service]
-ExecStart=/usr/bin/kdm -nodaemon
-
-[Install]
-Alias=display-manager.service
