@@ -1,12 +1,0 @@
-[Unit]
-Description=Anonymizing Overlay Network
-After=network.target
-
-[Service]
-Type=forking
-ExecStart=/usr/bin/tor
-ExecReload=/bin/kill -HUP $MAINPID
-KillSignal=SIGINT
-
-[Install]
-WantedBy=multi-user.target
